# goby3-course

./: .gitignore  CMakeLists.txt  COPYING  README.md  build.sh  goby3-course.code-workspace  syllabus.md
homework/day1-overview/: day1-overview_assignment.md
homework/day2-comms/: day2-comms_assignment.md
homework/day3-autonomy/: day3-autonomy_assignment.md
homework/day4-sensors/: ctd_data.csv  day4-sensors_assignment.md
launch/alpha/: alpha_deployment.yml  topside.launch  usv.launch
launch/alpha/auv_config/: alpha.moos  frontseat.pb.cfg  nav_manager.pb.cfg
launch/alpha/topside_config/: goby_geov_interface.pb.cfg  goby_opencpn_interface.pb.cfg  gobyd.pb.cfg  liaison.pb.cfg  manager.pb.cfg  nav_manager.pb.cfg
launch/intervehicle1/: veh1-mm.launch  veh1.launch  veh2-mm.launch  veh2.launch
launch/trail/: all.launch  auv.launch  auv.pb.cfg.py  generate_all_launch.sh  moos_gen.sh  nav_manager_auv.pb.cfg  nav_manager_topside.pb.cfg  topside.launch  topside.pb.cfg.py  trail_deployment.yml  trail_topside.pb.cfg.py  trail_usv.pb.cfg.py  usv.launch  usv.pb.cfg.py
launch/trail/common/: comms.py  (+3 more)
lectures/day1-overview/: day1-overview_notes.md
lectures/day2-comms/: day2-comms_notes.md  markdown-pdf.css
lectures/day3-autonomy/: day3-autonomy_notes.md
lectures/day4-sensors/: day4-sensors_notes.md  gps_deployment.yml
logs/: .gitignore
scripts/: clean_logs.sh  generate_app.sh  geov_mirror
src/lib/: CMakeLists.txt  groups.h
src/lib/messages/: CMakeLists.txt  command_dccl.proto  ctd.proto  dccl_example.proto  example.proto  health_status.proto  nav_dccl.proto
(+60 files in other folders)
